htick 0.02
----------

----- cvs ci ------
Sun Jul 25 21:17:54 NOVST 1999
max:
* small bugfix (if no passFileAreaDir in config -> core dump)

Sun Jul 25 21:11:45 1999
Georgi:
* change in "htick filelist"

Sat Jul 24 10:01:25 1999
Georgi:
* security check for %resend
* bugfix if in TIC file write in lowercase

Thu Jul 22 11:39:46 1999
Georgi:
* bugfix in move from .htk dir

Tue Jul 20 14:32:20 1999
Georgi:
+ FileFix now support %resend
+ Added "htick send"

Tue Jul 20 01:15:25 1999
Georgi:
* small bugfix in "htick filelist"

Sun Jul 18 22:41:05 1999
Georgi:
+ support Passthrough fileareas

Thu Jul 16  20:57:45
Georgi:
* FileFix now support mask
* post announce about new files in ReportTo or announceArea (from command string)
* bugfix if not define -r and/or -w in filearea option

Wed Jul 15  19:23:54
Georgi:
* bugfix in toss
* small change FileFix

Wed Jul 14  20:48:50
Georgi:
* bugfix if link is busy
* small change FileFix
* small bugfix in write file in files.bbs

Sun Jul 11  12:27:35
Georgi:
* small bugfix with recoding in posting announce and FileFix
* posting about new files in echoarea ("htick <toss | hatch> [announce <area>"])
+ "htick hatch ... [replace]" - fill replace field in TIC
+ support -h and -manual in area option

Mon Jul  5 22:39:33 NOVST 1999
max:
* small bugfix in recode.c

----- cvs ci ------
Thu Jul  1  15:30:55
Georgi:
* Fixed bug with seenby

Mon Jun 28  16:47:00
Fedor:
+ Added direct and immediate flavours

Sun Jun 27  15:26:00
Fedor:
* Fixed bug with BUSY flag
* Fixed bug with limiter / and \ in path
* Fixed bug with temporary directory when link is online (BUSY)
+ Added posting about autocreating filearea in netmail or echoarea (ReportTo)
+ Added posting about new files in netmail or echoarea (ReportTo)

Wed Jun 23  14:52:45
Georgi Fofanov (georgi@inem.uni.udm.ru):
* Many changes for "htick toss"
+ Added "htick hatch"
+ Added "htick filelist"
+ Added posting about new files in text file